# ReActFrameworkImplementation

./: .gitmodules  README.md  example_runs.txt  pyproject.toml
app/: __init__.py  app.py
app/templates/: chat.html
src/: __init__.py  __main__.py
src/react_agent/: __init__.py  agent.py  gemini.py  interaction.py  promptIo.py  react_agent.py
src/react_agent/prompt/: prompt.txt  promptIo.py
src/tools/: __init__.py  calculator.py  google.py  manager.py  wiki.py
