[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "nellyVoskanyan03",email = "voskanyannelli03@gmail.com"}
]
readme = "README.md"
packages = [{ include = "react_agent", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
pydantic = "^2.0.0"
requests = "^2.31.0"
google-genai="1.12.1"
google-search-results = "^2.4.2"
google-cloud-aiplatform = "1.67.1"
wikipedia-api = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
